# httpcpp

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md
include/httpcpp/: HttpClient.hpp  HttpResponse.hpp  HttpResponseParser.hpp  ISocket.hpp  Socket.hpp
src/: HttpClient.cpp  HttpResponse.cpp  HttpResponseParser.cpp  Socket.cpp  main.cpp
tests/: CMakeLists.txt  HttpClientTest.cpp  HttpResponseParserTest.cpp  MockSocket.hpp  SocketTest.cpp
